<resources>
    <string name="app_name">Carreras</string>
    <string name="titulo_activity_eventos">Eventos</string>
    <string name="titulo_activity_registro">Registro</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="registro">Registrarme</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>

    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="acerca_creador1">Mateo Noreña</string>
    <string name="acerca_creador2">Sergio Marriaga</string>
    <string name="curso">Computación Móvil 2016</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_usuario">Menú de Usuario</string>
    <string name="carreras">Carreras Universitarias</string>

    <string name="nombreCarrera">Nombre de la carrera</string>
    <string name="distanciaCarrera">Distancia de la carrera</string>
    <string name="lugarCarrera">Lugar de la carrera</string>
    <string name="fechaCarrera">Fecha de la carrera</string>
    <string name="fotoCarrera">Foto de la carrera</string>
    <string name="telefonoCarrera">Teléfono de contacto</string>
    <string name="correoCarrera">Correo de contacto</string>
    <string name="guardarCarrera">Guardar carrera</string>
    <string name="carrera_guardada">Recordatorio guardado</string>

</resources>
