<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr4.lab2apprun.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usuario"
        android:hint="@string/usuario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clave"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:layout_below="@id/usuario"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:id="@+id/ingresar"
        android:onClick="ingresar"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/clave"
        android:layout_alignLeft="@+id/registrar"
        android:layout_alignStart="@+id/registrar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/registrar"
        android:onClick="registrar"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ingresar"
        />
</RelativeLayout>
